--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 .idea
+*/.idea
 test.py
 *__pycache__*
 TODO.md
 *pong_reloaded_remastered*
 .DS_Store
-../docs/_build/
-../docs/_static/
-../docs/_templates
+dist
